<resources>
    <string name="app_name">1200493_CourseProject</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- New Navigation Menu Strings -->
    <string name="menu_today">Today</string>
    <string name="menu_new_task">New Task</string>
    <string name="menu_all_tasks">All Tasks</string>
    <string name="menu_completed">Completed</string>
    <string name="menu_search">Search</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
</resources>
